# Tank-Game-2

./: .gitignore  CMakeLists.txt  README.md  build.sh
level_editor/: common.py  editor.py  level.py  main.py  tk_utils.py
static/levels/: level_test.json
static/templates/: player.json
static/templates/bullets/: bullet_classic.json  bullet_fast.json  egg.json
static/templates/obstacles/: wall.json
static/templates/tanks/: chicken.json  tank2.json  tank3.json
static/templates/turrets/: turret1.json  turret3.json
tank_game/: editor.py  main.cxx  test.cxx
tank_game/include/: Components.hpp  InputManager.hpp  Level.hpp  LevelEditor.hpp  RessourceManager.hpp  Scene.hpp  Systems.hpp  Tiles.hpp  entity_init.hpp  tiles.hpp
tank_game/include/Components/: Animation.hpp  Children.hpp  Collision.hpp  Control.hpp  Damage.hpp  Debug.hpp  Orientation.hpp  Position.hpp  Shoot.hpp  Sprite.hpp  Transform.hpp  Type.hpp  Velocity.hpp
tank_game/include/Systems/: Animation.hpp  Collision.hpp  Control.hpp  Damage.hpp  Render.hpp  Shoot.hpp  Transform.hpp
tank_game/include/common/: debug.hpp  grid.hpp  macros.hpp  math.hpp
tank_game/src/: InputManager.cpp  Level.cpp  LevelEditor.cpp  RessourceManager.cpp  Tiles.cpp  entity_init.cpp  tiles.cpp
tank_game/src/Systems/: Animation.cpp  Collision.cpp  Control.cpp  Damage.cpp  Render.cpp  Shoot.cpp  Transform.cpp
tank_game/src/common/: debug.cpp  math.cpp
